fix: Make the appbar keep a higher z-index while the view transition takes place

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -10,6 +10,10 @@
     margin: 0;
 }*/
 
+::view-transition-group(appbar) {
+    z-index: 1300;
+}
+
 html {
     height: 100%;
 }
